<resources>
    <!--  common  -->
    <string name="app_name">감정플리</string>
    <string name="label_navigation_home">홈</string>
    <string name="label_navigation_search">검색</string>
    <string name="label_navigation_playlist">플레이리스트</string>
    <string name="label_navigation_my">마이</string>
    <string name="label_setting">설정</string>
    <string name="description_album_cover_image">앨범 커버</string>
    <string name="delete_track_title">음악 삭제</string>
    <string name="delete_track_message">정말로 삭제 하시겠습니까?</string>
    <string name="label_track_delete">노래가 삭제되었습니다.</string>
    <string name="label_track_delete_failed">노래 삭제에 실패했습니다.</string>

    <!--  스플래쉬  -->
    <string name="message_check_internet_status">인터넷 상태를 확인해주세요</string>

    <!--  로그인  -->
    <string name="login_title">감정플리</string>
    <string name="login_description">오늘 하루의 주제곡을 남겨보세요</string>
    <string name="login_user_cancelled">사용자가 로그인을 취소했습니다</string>
    <string name="login_auth_error">인증에 실패했습니다. 다시 시도해주세요.</string>
    <string name="login_api_error">카카오 서버와의 통신에 실패했습니다.</string>
    <string name="login_client_error">로그인 처리 중 문제가 발생했습니다.</string>
    <string name="login_sdk_error">카카오 로그인에 실패했습니다.</string>
    <string name="login_success">로그인 성공!</string>
    <string name="login_success_sync_failed">로그인 성공! (백업 데이터 로드 실패)</string>
    <string name="login_unknown_error">알 수 없는 오류가 발생했습니다.</string>

    <!--  홈  -->
    <string name="label_home_title">감정플리</string>
    <string name="label_home_empty_track_title">등록된 음악이 없습니다.</string>
    <string name="label_home_empty_track_subtitle">오늘의 음악을 등록해보세요.</string>
    <string name="label_recommend_track">유사한 음악 추천</string>
    <string name="description_previous_month">이전 달</string>
    <string name="description_next_month">다음 달</string>
    <string name="current_month_format">%1$d년 %2$d월</string>
    <string name="message_press_back_to_exit">뒤로 가기 버튼을 한 번 더 누르면 종료됩니다.</string>

    <!--  검색  -->
    <string name="label_music_search">음악 검색</string>
    <string name="label_recent_search">최근 검색어</string>
    <string name="label_clear_all_recent_search">전체삭제</string>
    <string name="description_clear_recent_search">최근 검색어 삭제</string>
    <string name="search_empty_message">검색어를 입력해주세요.</string>
    <string name="hint_search_track">노래 제목 또는 가수를 입력해주세요.</string>
    <string name="hint_search_artist_or_title">아티스트 혹은 제목을 검색해주세요</string>
    <string name="label_track_empty_title">검색된 곡이 없습니다.</string>
    <string name="label_track_empty_subtitle">다른 곡을 선택해주세요.</string>
    <string name="label_search_result_empty">검색 결과가 없어요</string>
    <string name="label_history_empty_subtitle">오늘 당신의 기분은 어떤가요?</string>

    <!--  등록  -->
    <string name="label_music_memo">음악 기록</string>
    <string name="label_emotion_record">감정기록</string>
    <string name="label_save_memo">기록하기</string>
    <string name="label_track_confirm_message">이 노래를 오늘의 노래로\n등록하시겠습니까?</string>
    <string name="label_cancel">취소</string>
    <string name="label_confirm">등록</string>
    <string name="label_confirm_track_emotion">감정 선택</string>
    <string name="label_track_saved">노래가 등록되었습니다.</string>
    <string name="label_track_save_failed">노래 등록에 실패했습니다.</string>
    <string name="track_info_format">%1$s - %2$s</string>

    <!--  설정  -->
    <string name="label_setting_data_clear">데이터 초기화</string>

    <!--  MY 화면  -->
    <string name="label_my_title">MY</string>
    <string name="label_my_music_count">지금까지 기록한\n감정플리 %d곡</string>
    <string name="label_my_music_count_empty">아직까지 기록한\n감정플리 없습니다</string>
    <string name="label_my_settings_section">설정</string>
    <string name="label_my_menu_account_setting">계정 설정</string>
    <string name="label_my_menu_emotion_tag">감정 태그 관리</string>
    <string name="label_my_menu_notification">알림 설정</string>
    <string name="label_my_menu_instagram_share">인스타 공유 설정</string>
    <string name="label_signature_song_section">나의 인생곡</string>
    <string name="label_signature_song_more">인생곡 모아보기</string>
    <string name="label_signature_song_none_cta">당신의 인생곡을 선정해보세요</string>
    <string name="label_signature_list_title">인생곡 모아보기</string>
    <string name="label_signature_list_empty">아직 등록한 인생곡이 없어요.</string>
    <string name="label_signature_song_since_detail">%1$s부터 %2$d%3$s</string>
    <string name="label_signature_song_since_days_only">인생곡이 된지 %1$d%2$s</string>
    <string name="label_signature_song_day_suffix">일</string>
    <string name="format_signature_song_date">yyyy년 MM월 dd일</string>

    <!--  계정 설정  -->
    <string name="label_user_setting_title">계정설정</string>
    <string name="label_user_setting_login_info">로그인 정보</string>
    <string name="label_user_setting_account_setting">계정 설정</string>
    <string name="label_user_setting_logout">로그아웃</string>
    <string name="label_user_setting_withdraw">회원탈퇴</string>
    <string name="label_user_setting_withdraw_title">회원 탈퇴</string>
    <string name="label_user_setting_withdraw_confirm">탈퇴</string>
    <string name="message_user_setting_withdraw_message">회원 탈퇴하면 모든 정보가 지워집니다.\n정말 탈퇴하시겠습니까?</string>
    <string name="label_user_setting_data_cleanup">데이터 초기화</string>
    <string name="label_user_setting_data_cleanup_title">데이터 초기화</string>
    <string name="label_user_setting_data_cleanup_confirm">초기화</string>
    <string name="message_user_setting_data_cleanup_message">그 동안 기록한 플리가 모두 지워집니다.\n정말 초기화하시겠습니까?</string>

    <!--  인스타그램 공유 설정  -->
    <string name="label_instagram_share_setting_title">인스타 공유 설정</string>
    <string name="label_instagram_share_option_title">공유 옵션</string>
    <string name="label_instagram_share_album_cover">앨범 커버 표시</string>
    <string name="label_instagram_share_title">노래 제목 표시</string>
    <string name="label_instagram_share_artist">아티스트 표시</string>
    <string name="label_instagram_share_emotions">감정 태그 표시</string>
    <string name="label_instagram_share_memo">메모 표시</string>
    <string name="label_instagram_share_recorded_time">저장 시각 표시</string>
    <string name="label_instagram_share_preview">미리보기</string>
    <string name="label_instagram_share_preview_title">노래 제목</string>
    <string name="label_instagram_share_preview_artist">아티스트</string>
    <string name="label_instagram_share_preview_memo">오늘 하루의 감정을 남겨보세요</string>
    <string name="message_instagram_share_minimum_option">최소 1개의 옵션을 설정해야 합니다</string>

    <!--  상세  -->
    <string name="hint_track_detail_comment">내용을 입력하세요.</string>
    <string name="description_track_delete_button">삭제</string>
    <string name="description_track_instagram_share">스토리 공유하기</string>
    <string name="description_drag_handle">순서 변경</string>
    <string name="label_add_custom_emotion">감정 추가</string>
    <string name="label_delete_emotion">감정 삭제</string>
    <string name="label_emotion_menu">감정 메뉴</string>
    <string name="hint_emotion_name">감정 이름 입력</string>
    <string name="hint_add_emotion">추가할 감정을 입력해주세요</string>
    <string name="message_emotion_name_empty">감정 이름을 입력해주세요</string>
    <string name="message_emotion_already_exists">이미 존재하는 감정입니다</string>
    <string name="message_select_emotion_to_delete">삭제할 감정을 선택해주세요</string>
    <string name="message_emotion_deleted">감정이 삭제되었습니다</string>
    <string name="label_delete_selected_emotions">선택한 감정을 삭제합니다</string>
    <string name="label_delete_n_emotions">%d개의 감정을 삭제합니다</string>
    <string name="message_delete_confirm_title">감정 삭제</string>
    <string name="message_delete_confirm">선택한 감정을 삭제하시겠습니까?</string>
    <string name="label_delete">삭제</string>

    <!-- 알림 관련 -->
    <string name="notification_channel_name">음악 알림</string>
    <string name="notification_channel_description">오늘의 음악 추가 알림을 받습니다</string>
    <string name="daily_music_reminder_title">오늘의 음악을 추가해보세요</string>
    <string name="daily_music_reminder_content">오늘하루를 대표할 주제곡이 있나요?</string>
    <string name="label_notification_setting_title">알림 설정</string>
    <string name="label_notification_setting_description">매일 오후 9시에 잊지 않게 알림이 울립니다.</string>
    <string name="message_notification_permission_required">알림을 받으려면 알림 권한을 허용해 주세요.</string>
    <string name="label_open_notification_settings">허용</string>
    <string name="label_common_cancel">취소</string>

    <!--  감정  -->
    <!-- Emotions -->
    <string name="emotion_happy">행복</string>
    <string name="emotion_sad">슬픔</string>
    <string name="emotion_angry">분노</string>
    <string name="emotion_joyful">기쁨</string>
    <string name="emotion_anxious">불안</string>
    <string name="emotion_calm">평온</string>
    <string name="emotion_excited">흥분</string>
    <string name="emotion_bored">지루함</string>
    <string name="emotion_confident">자신감</string>
    <string name="emotion_fearful">두려움</string>
    <string name="emotion_grateful">감사</string>
    <string name="emotion_frustrated">좌절</string>
    <string name="emotion_hopeful">희망</string>
    <string name="emotion_lonely">외로움</string>
    <string name="emotion_loving">사랑</string>
    <string name="emotion_jealous">질투</string>
    <string name="emotion_regretful">후회</string>
    <string name="emotion_surprised">놀람</string>
    <string name="emotion_confused">혼란</string>
    <string name="emotion_satisfied">만족</string>
    <string name="emotion_melancholic">우울</string>
    <string name="emotion_nostalgic">그리움</string>
    <string name="emotion_dreamy">몽환적</string>
    <string name="emotion_energetic">활기찬</string>
    <string name="emotion_peaceful">평화로움</string>
    <string name="emotion_romantic">로맨틱</string>
    <string name="emotion_empowered">힘이 나는</string>
    <string name="emotion_reflective">사색적인</string>
    <string name="emotion_touched">감동적인</string>
    <string name="emotion_uplifted">고양된</string>
    <string name="emotion_determined">결연한</string>
    <string name="emotion_sentimental">감상적인</string>
    <string name="emotion_free">자유로운</string>
    <string name="emotion_comforted">위로받는</string>
    <string name="emotion_passionate">열정적인</string>
    <string name="message_instagram_not_installed">인스타그램이 설치되어 있지 않습니다.</string>

    <!-- Instagram Share Helper Messages -->
    <string name="message_track_info_not_available">트랙 정보가 없습니다.</string>
    <string name="message_share_error">공유 중 오류가 발생하였습니다.</string>
    <string name="message_image_generation_failed">이미지 생성에 실패했습니다.</string>
    <string name="message_file_save_failed">파일 저장에 실패했습니다.</string>
    <string name="message_image_loading_failed">이미지 로딩에 실패했습니다.</string>

    <string-array name="week_days">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
</resources>