<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.emotion_setting.EmotionSettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_emotion_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigation_arrow_back"
        app:title="@string/label_my_menu_emotion_tag" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_emotions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_emotion_setting"
        tools:listitem="@layout/item_emotion" />

    <View
        android:id="@+id/view_dim_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="#80000000"
        android:clickable="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_emotion_menu"
        style="@style/Widget.MusicLog.CardView.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab_main"
        app:layout_constraintEnd_toStartOf="@id/fab_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_add_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                android:text="@string/label_add_custom_emotion"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.MusicLog.BodyLarge" />

            <TextView
                android:id="@+id/tv_delete_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                android:text="@string/label_delete_emotion"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.MusicLog.BodyLarge" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        style="@style/Widget.MusicLog.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:contentDescription="@string/label_emotion_menu"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_selected"
        style="@style/Widget.MusicLog.Button.Delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:paddingVertical="16dp"
        android:text="@string/label_delete_selected_emotions"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_emotion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_add_emotion"
            style="@style/Widget.MusicLog.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/text_field_stroke_color"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeWidthFocused="1dp"
            app:cursorColor="@color/blue_300"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.82"
            app:placeholderText="@string/hint_add_emotion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_add_emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_done"
            style="@style/Widget.MusicLog.Button.Delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/label_confirm"
            app:layout_constraintBottom_toBottomOf="@id/tf_add_emotion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tf_add_emotion"
            app:layout_constraintTop_toTopOf="@id/tf_add_emotion" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>