<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tv_today_music_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTitleStyle.S24" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_today_music_label">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_today_music"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_blue300"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_home_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iv_track_image, tv_track_title, tv_track_artist, chip_group_home_emotions, btn_youtube" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_track_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="8dp"
                android:src="@drawable/background_gray"
                app:layout_constraintBottom_toBottomOf="@id/view_today_music"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/view_today_music"
                app:layout_constraintTop_toTopOf="@id/view_today_music"
                app:shapeAppearanceOverlay="@style/AppRoundedImage" />

            <TextView
                android:id="@+id/tv_track_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MusicLog.BodyLarge"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_youtube"
                app:layout_constraintStart_toEndOf="@id/iv_track_image"
                app:layout_constraintTop_toTopOf="@id/iv_track_image"
                tools:text="Answer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer MeAnswer Me" />

            <TextView
                android:id="@+id/tv_track_artist"
                style="@style/TextAppearance.MusicLog.BodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/gray_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_youtube"
                app:layout_constraintStart_toStartOf="@id/tv_track_title"
                app:layout_constraintTop_toBottomOf="@id/tv_track_title"
                tools:text="AKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMUAKMU" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_home_emotions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                app:chipSpacingHorizontal="4dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_track_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_youtube"
                app:layout_constraintStart_toStartOf="@id/tv_track_title" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_circle_white"
                android:elevation="2dp"
                android:padding="6dp"
                android:src="@drawable/ic_youtube_logo"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/view_today_music"
                app:layout_constraintTop_toTopOf="@id/view_today_music" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_today_music_empty"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:constraint_referenced_ids="tv_today_music_empty_label, tv_today_music_empty_sub_label" />

            <TextView
                android:id="@+id/tv_today_music_empty_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_home_empty_track_title"
                android:textAppearance="@style/TextAppearance.MusicLog.BodyLarge"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/view_today_music"
                app:layout_constraintTop_toTopOf="@id/view_today_music" />

            <TextView
                android:id="@+id/tv_today_music_empty_sub_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/label_home_empty_track_subtitle"
                android:textAppearance="@style/TextAppearance.MusicLog.BodySmall"
                android:textColor="@color/gray_700"
                app:layout_constraintStart_toStartOf="@id/tv_today_music_empty_label"
                app:layout_constraintTop_toBottomOf="@id/tv_today_music_empty_label" />

            <include
                android:id="@+id/calendar_content"
                layout="@layout/layout_calendar_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@id/view_today_music"
                app:layout_constraintStart_toStartOf="@id/view_today_music"
                app:layout_constraintTop_toBottomOf="@id/view_today_music" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_music"
        style="@style/Widget.MusicLog.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_music_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>